--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container mx-auto py-4">
     <div *ngIf="book; else noBook" class="mb-8 flex flex-row border border-solid border-slate-200 px-4">
         <div class="basis-5/12">
-            <img src="https://jiangshanmeta.github.io/spider-banshujiang/images/{{book.id}}.jpeg" />
+            <img src="{{book.id | bookId2ImgUrl}}" />
         </div>
         <div class="flex-auto pt-3">
             <h2 class="mb-8 text-center text-2xl font-bold underline underline-offset-8">{{book.title}}</h2>
