--- a/src/app/book-list/book-list.component.html
+++ b/src/app/book-list/book-list.component.html
@@ -1,13 +1,18 @@
 <div class="container mx-auto py-4">
     <div>
-        <div *ngFor="let book of books | paginate: { itemsPerPage: 10, currentPage: currentPage }" class="mb-4 flex flex-row border border-solid border-slate-200">
+        <div 
+            *ngFor="let book of books | paginate: { itemsPerPage: 10, currentPage: currentPage }" 
+            class="mb-4 flex flex-row border border-solid border-slate-200"
+        >
             <div class="w-32">
                 <img src="{{book.id | bookId2ImgUrl}}" />
             </div>
             <div class="flex-auto pt-4 pl-4 text-base">
                 <div class="mb-2">
                     <div class="float-left mr-2 text-slate-400">书名:</div>
-                    <div class="font-bold"><a routerLink="/e_book/{{book.id}}" class="cursor-pointer text-sky-500">{{book.title}}</a></div>
+                    <div class="font-bold">
+                        <a routerLink="/e_book/{{book.id}}" class="cursor-pointer text-sky-500">{{book.title}}</a>
+                    </div>
                 </div>
 
                 <div class="mb-2">
