--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container mx-auto py-4">
-    <div *ngIf="categories.length" class="mb-8 border border-solid border-slate-200">
+    <div  class="mb-8 border border-solid border-slate-200">
         <div class="mb-1 border-b border-solid border-slate-200 py-1 pl-6 shadow">分类</div>
         <ul>
-            <li *ngFor="let category of categories" class="mb-1.5 flex flex-row pl-6">
+            <li *ngFor="let category of categories$ | async" class="mb-1.5 flex flex-row pl-6">
                 <div class="my-1.5 flex-none basis-24">{{ category.label }}</div>
                 <div>
                     <ul class="flex flex-row flex-wrap">
