--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<div class="dark:bg-slate-900 dark:text-slate-400">
+    <app-nav></app-nav>
+    <router-outlet></router-outlet>
+</div>
