--- a/src/app/book-detail/book-detail.component.html
+++ b/src/app/book-detail/book-detail.component.html
@@ -1,5 +1,9 @@
+<!-- eslint-disable max-len -->
 <div class="container mx-auto py-4">
-    <div *ngIf="book; else noBook" class="mb-8 flex flex-row border border-solid border-slate-200 px-4">
+    <div 
+        *ngIf="book; else noBook" 
+        class="mb-8 flex flex-row border border-solid border-slate-200 px-4 dark:border-slate-50/[0.06]"
+    >
         <div class="basis-5/12">
             <img src="{{book.id | bookId2ImgUrl}}" />
         </div>
@@ -31,8 +35,10 @@
     </ng-template>
 
 
-    <div *ngIf="books.length" class="border border-solid border-slate-200">
-        <div class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200 py-1 pl-6 shadow">
+    <div *ngIf="books.length" class="border border-solid border-slate-200 dark:border-slate-50/[0.06]">
+        <div 
+            class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200 py-1 pl-6 shadow dark:border-slate-50/[0.06]"
+        >
             <span>相关推荐</span>
         </div>
         <ul class="grid grid-cols-2 gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
