--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
+<!-- eslint-disable max-len -->
 <div class="container mx-auto py-4">
-    <div  class="mb-8 border border-solid border-slate-200">
-        <div class="mb-1 border-b border-solid border-slate-200 py-1 pl-6 shadow">分类</div>
+    <div  class="mb-8 border border-solid border-slate-200 dark:border-slate-50/[0.06]">
+        <div class="mb-1 border-b border-solid border-slate-200 py-1 pl-6 shadow dark:border-slate-50/[0.06]">分类</div>
         <ul>
             <li *ngFor="let category of categories$ | async" class="mb-1.5 flex flex-row pl-6">
                 <div class="my-1.5 flex-none basis-24">{{ category.label }}</div>
@@ -18,8 +19,10 @@
         </ul>
     </div>
 
-    <div *ngIf="books.length" class="border border-solid border-slate-200">
-        <div class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200 py-1 pl-6 shadow">
+    <div *ngIf="books.length" class="border border-solid border-slate-200 dark:border-slate-50/[0.06]">
+        <div
+            class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200  py-1 pl-6 shadow dark:border-slate-50/[0.06]"
+        >
             <span>最新更新</span>
             <span class="mr-4 cursor-pointer text-sky-500" (click)="gotoBookList()">更多&gt;&gt;</span>
         </div>
