feat: app min-height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="dark:bg-slate-900 dark:text-slate-400">
+<div class="flex min-h-screen flex-col dark:bg-slate-900 dark:text-slate-400">
     <app-nav></app-nav>
-    <router-outlet></router-outlet>
+    <div class="flex-auto">
+        <router-outlet ></router-outlet>
+    </div>
 </div>
