feat: lazy-loading module

--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -11,7 +11,7 @@
                 <div class="mb-2">
                     <div class="float-left mr-2 text-slate-400">书名:</div>
                     <div class="font-bold">
-                        <a routerLink="/e_book/{{book.id}}" class="cursor-pointer text-sky-500">{{book.title}}</a>
+                        <a routerLink="/book/e_book/{{book.id}}" class="cursor-pointer text-sky-500">{{book.title}}</a>
                     </div>
                 </div>
 
