--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <div class="container mx-auto flex justify-between">
         <div>
             <a routerLink="/" class="mr-2 text-sky-500">首页</a>
-            <a routerLink="/books" class="text-sky-500">所有书籍</a>
+            <a routerLink="/book/books" class="text-sky-500">所有书籍</a>
         </div>
         <div class="flex items-center">
             <div class="cursor-pointer" (click)="themeService.toggle()">
