--- a/src/app/book/book-detail/book-detail.component.html
+++ b/src/app/book/book-detail/book-detail.component.html
@@ -11,22 +11,34 @@
             <h2 class="mb-8 text-center text-2xl font-bold underline underline-offset-8">{{book.title}}</h2>
 
             <div class="mb-4">
-                <div class="float-left w-24 text-right">作者：</div>
+                <div class="float-left mr-2.5">
+                    <ng-container i18n>作者</ng-container>
+                    :
+                </div>
                 <div>{{book.author}}</div>
             </div>
 
             <div class="mb-4">
-                <div class="float-left w-24 text-right">语言：</div>
+                <div class="float-left mr-2.5">
+                    <ng-container i18n>语言</ng-container>
+                    :
+                </div>
                 <div>{{book.language}}</div>
             </div>
 
             <div class="mb-4">
-                <div class="float-left w-24 text-right">出版年份：</div>
+                <div class="float-left mr-2.5">
+                    <ng-container i18n>出版年份</ng-container>
+                    :
+                </div>
                 <div>{{book.publishYear}}</div>
             </div>
 
             <div class="mb-4" *ngIf="book.programLanguage">
-                <div class="float-left w-24 text-right">编程语言：</div>
+                <div class="float-left mr-2.5">
+                    <ng-container i18n>编程语言</ng-container>
+                    :
+                </div>
                 <div>{{book.programLanguage}}</div>
             </div>
 
@@ -43,7 +55,7 @@
         <div 
             class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200 py-1 pl-6 shadow dark:border-slate-50/[0.06]"
         >
-            <span>相关推荐</span>
+            <span i18n>相关推荐</span>
         </div>
         <ul class="grid grid-cols-2 gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
             <li *ngFor="let book of books" class="my-3">
