--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,8 +2,8 @@
 <div class=" border-b border-solid border-slate-200 py-1 leading-10 dark:border-slate-50/[0.06]">
     <div class="container mx-auto flex justify-between">
         <div>
-            <a routerLink="/" class="mr-2 text-sky-500">首页</a>
-            <a routerLink="/book/books" class="text-sky-500">所有书籍</a>
+            <a routerLink="/" class="mr-2 text-sky-500" i18n>首页</a>
+            <a routerLink="/book/books" class="text-sky-500" i18n>所有书籍</a>
         </div>
         <div class="flex items-center">
             <div class="cursor-pointer" (click)="themeService.toggle()">
