--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ngx-pagination{
+    display:flex;
+    justify-content:center;
+}
+
+.dark .ngx-pagination a {
+    color: #fff;
+}
+
+.dark .ngx-pagination a:hover {
+    color: #0a0a0a;
+}
