fix: ut selector

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
                     stroke-linecap="round" 
                     stroke-linejoin="round" 
                     class="h-6 w-6"
-                    id="nav-theme-light"
+                    data-testid="nav-theme-light"
                 >
                     <path d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" class="fill-sky-400/20 stroke-sky-500"></path>
                     <path
@@ -29,7 +29,7 @@
                     viewBox="0 0 24 24" 
                     fill="none" 
                     class="h-6 w-6"
-                    id="nav-theme-dark"
+                    data-testid="nav-theme-dark"
                 >
                     <path 
                         fill-rule="evenodd" 
