--- a/src/app/book/book-detail/book-detail.component.html
+++ b/src/app/book/book-detail/book-detail.component.html
@@ -51,14 +51,14 @@
     </ng-template>
 
 
-    <div *ngIf="books.length" class="border border-solid border-slate-200 dark:border-slate-50/[0.06]">
+    <div class="border border-solid border-slate-200 dark:border-slate-50/[0.06]">
         <div 
             class="mb-1 flex flex-row justify-between border-b border-solid border-slate-200 py-1 pl-6 shadow dark:border-slate-50/[0.06]"
         >
             <span i18n>相关推荐</span>
         </div>
         <ul class="grid grid-cols-2 gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
-            <li *ngFor="let book of books" class="my-3">
+            <li *ngFor="let book of books$ | async" class="my-3">
                 <a routerLink="/book/e_book/{{book.id}}">
                     <img src="{{book.id | bookId2ImgUrl}}" />
                 </a>
