--- a/src/app/book/book-detail/book-detail.component.html
+++ b/src/app/book/book-detail/book-detail.component.html
@@ -1,5 +1,5 @@
 <!-- eslint-disable max-len -->
-<div class="container mx-auto py-4">
+<div class="container mx-auto py-4 px-8">
     <div 
         *ngIf="book; else noBook" 
         class="mb-8 flex flex-row border border-solid border-slate-200 px-4 dark:border-slate-50/[0.06]"
@@ -61,8 +61,9 @@
             <li *ngFor="let book of books$ | async" class="my-3">
                 <a routerLink="/book/e_book/{{book.id}}">
                     <img src="{{book.id | bookId2ImgUrl}}" />
+                
+                    <span class="mt-2 block text-center text-xs">{{book.title}}</span>
                 </a>
-                <div class="mt-2 text-center text-xs">{{book.title}}</div>
             </li>
         </ul>
     </div>
