--- a/src/app/book/book-list/book-list.component.html
+++ b/src/app/book/book-list/book-list.component.html
@@ -1,8 +1,9 @@
-<div class="container mx-auto py-4">
-    <div>
+<div class="container mx-auto py-4 px-8">
+    <div >
         <div 
             *ngFor="let book of books | paginate: { itemsPerPage: 10, currentPage: currentPage }" 
             class="mb-4 flex flex-row border border-solid border-slate-200 dark:border-slate-50/[0.06]"
+            data-testcls="book-list-item"
         >
             <div class="w-32">
                 <img src="{{book.id | bookId2ImgUrl}}" />
