--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- eslint-disable max-len -->
-<div class="container mx-auto py-4">
+<div class="container mx-auto py-4 px-8">
     <div  class="mb-8 border border-solid border-slate-200 dark:border-slate-50/[0.06]">
         <div class="mb-1 border-b border-solid border-slate-200 py-1 pl-6 shadow dark:border-slate-50/[0.06]">分类</div>
         <ul>
@@ -33,8 +33,9 @@
             <li *ngFor="let book of books$ | async" class="my-3">
                 <a routerLink="/book/e_book/{{book.id}}">
                     <img src="{{book.id | bookId2ImgUrl}}" />
+                
+                    <span class="mt-2 block text-center text-xs">{{book.title}}</span>
                 </a>
-                <div class="mt-2 text-center text-xs">{{book.title}}</div>
             </li>
         </ul>
     </div>
