--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <!-- eslint-disable max-len -->
-<div class=" border-b border-solid border-slate-200 py-1 leading-10 dark:border-slate-50/[0.06]">
+<nav class=" border-b border-solid border-slate-200 py-1 px-2 leading-10 dark:border-slate-50/[0.06]">
     <div class="container mx-auto flex justify-between">
         <div>
             <a routerLink="/" class="mr-2 text-sky-500" i18n>首页</a>
@@ -54,4 +54,4 @@
 
         </div>
     </div>
-</div>
+</nav>
